# openperps-oss

./: .env.example  .gitattributes  .gitignore  ABOUT.md  CONTRIBUTING.md  Cargo.toml  NOTICE  README.md  SECURITY.md  package-lock.json  package.json
.github/: dependabot.yml
.github/workflows/: ci.yml
apps/indexer/: migrate-v5.sql  package-lock.json  package.json  schema.sql  tsconfig.json
apps/indexer/src/: auth.ts  index.ts  priceFeed.ts
apps/web/: index.html  package-lock.json  package.json  vite.config.ts
apps/web/src/: main.tsx  routeTree.gen.ts  styles.css
apps/web/src/components/openperps/: AccountPanel.tsx  AccountTabs.tsx  Landing.tsx  LaunchpadPanel.tsx  MarketBrowser.tsx  OraclePanel.tsx  OrderBook.tsx  OrderPanel.tsx  PriceChart.tsx  Shell.tsx  TradingChart.tsx  WalletButton.tsx  landing.css
apps/web/src/hooks/: useSlot.ts
apps/web/src/lib/: assets.ts  chartData.ts  collateral.ts  decimals.ts  dexscreener.ts  format.ts  indexer.ts  livePrice.ts  mainnetPrice.ts  mock.ts  officialMarkets.ts  onchain.ts  portfolioRegistry.ts  priceFeed.ts  program.ts  registry.ts  sessionKey.ts  sharedMarket.ts  tradeLog.ts  types.ts
apps/web/src/lib/flows/: faucetFlow.ts  launchMarket.ts  launchpadFlow.ts  oracleFlows.ts  placeOrderFlow.ts  portfolioFlows.ts
apps/web/src/lib/launch/: aggregatorFlow.ts  ipfs.ts  native.ts  providers.ts  pumpportal.ts  raydiumCpmm.ts  spotPool.ts  types.ts
apps/web/src/routes/: README.md  __root.tsx  about.tsx  app.tsx  crank.tsx  faucet.tsx  index.tsx  launch.tsx  launchpad.tsx  portfolio.tsx  vault.tsx
apps/web/src/wallet/: SolanaProviders.tsx
crates/engine/: Cargo.toml  kani-list.json  spec.md
crates/engine/scripts/: arithmetic_axiom_manifest.md  audit-proof-strength.md  isolated_full_audit.sh  isolated_retry.sh  isolated_runner.sh  kernel-branch-certification.md  no-dos-liveness.md  no-steal-theorem.md  proof-frontier-closure.md  proof-strength-audit-results.md  reorder_proofs.py  restore_resolved_payout.py  run_kani_full_audit.sh  spec-coverage.md  temporary-engine-roadmap.md
crates/engine/src/: lib.rs  v16.rs  wide_math.rs
crates/engine/tests/: proofs_v16.rs  proofs_v16_arithmetic.rs  resolved_insolvent_fuzz.rs  v16_fuzzing.rs  v16_spec_tests.rs
crates/program/: Cargo.toml
crates/program/src/: cpi.rs  dexamm.rs  entrypoint.rs  error.rs  hlp.rs  inslp.rs  instruction.rs  lib.rs  processor.rs  pyth.rs  state.rs
crates/program/tests/: init_deposit.rs
docs/: architecture.md  deployment-checklist.md  engine-upstream.md  examples.md  hlp.md  inslp.md  insurance-fund.md  keeper-config.example.ts  keeper-freshness.md  keeper.md  launch-aggregator.md  launchpad.md  lifecycle.md  market-config.md  market-creation-intent.md  oracle-and-price-safety.md  oracle-hardening.md  oracle-integration.md  permissions.md  quickstart.md  react-components.md  risk-tiers.md  sdk.md  security-and-limitations.md  trade-intent.md  whitepaper.md
docs/superpowers/plans/: 2026-06-01-openperps-oss-sdk-first.md
docs/superpowers/specs/: 2026-06-01-openperps-oss-sdk-first-design.md
examples/dex-terminal/: README.md  index.html  package-lock.json  package.json  vite.config.ts
examples/dex-terminal/src/: App.tsx  main.tsx
examples/launchpad/: README.md  index.html  package-lock.json  package.json  tsconfig.json
examples/launchpad/src/: App.tsx
examples/node-create-market/: README.md  package-lock.json  package.json  tsconfig.json
examples/node-create-market/src/: index.ts
examples/telegram-bot/: README.md  package-lock.json  package.json  tsconfig.json
examples/telegram-bot/src/: commands.ts  index.ts
examples/telegram-bot/test/: commands.test.ts
examples/token-page/: README.md  index.html  package-lock.json  package.json
examples/token-page/src/: App.tsx  polyfills.ts
examples/wallet-position-card/: README.md  index.html  package-lock.json  package.json  vite.config.ts
examples/wallet-position-card/src/: App.tsx  main.tsx
scripts/: rewrite-dts-extensions.mjs  run-onchain-suite.sh
ts/frontend/: .gitignore  index.html  package-lock.json  package.json
ts/frontend/src/: main.tsx
ts/frontend/src/components/openperps/: AccountPanel.tsx  Shell.tsx
ts/frontend/src/lib/: dexscreener.ts  portfolioRegistry.ts  program.ts  sharedMarket.ts
ts/frontend/src/lib/flows/: faucetFlow.ts  portfolioFlows.ts
ts/frontend/src/routes/: app.tsx  faucet.tsx  portfolio.tsx
ts/indexer/: package-lock.json  wrangler.toml
ts/keeper/: package.json  tsconfig.json
ts/keeper/src/: accrual.ts  index.ts  keeper.ts
ts/react/: package-lock.json  package.json
ts/react/src/: OpenPerpsChart.tsx  OpenPerpsPosition.tsx  OpenPerpsTrade.tsx  useOpenPerpsTrade.ts
ts/sdk/: package-lock.json  package.json  tsconfig.json
ts/sdk/scripts/: inspect-lifecycle.ts  inspect-mode.ts  inspect-raw.ts
ts/sdk/src/: config.ts  decoders.ts  index.ts  instructions.ts  market-create-build.ts  market-creation.ts  trade-resolution.ts
ts/sdk/test/: config.test.ts  decoders.test.ts  price.test.ts  trade-build.test.ts  transactions.test.ts
