# Forked from aeyakovenko/percolator (Apache-2.0). See ../../NOTICE.
# This crate is the unmodified risk-engine library; OpenPerps builds the
# on-chain wrapper around it in crates/program.
[package]
name = "percolator"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[lib]
name = "percolator"
path = "src/lib.rs"

[dependencies]
bytemuck = { version = "1.23", default-features = false, features = ["derive"] }

[dev-dependencies]
proptest = "1.11"

[features]
default = []
test = ["runtime-vec-api"]  # Enable test-only harness configuration
stress = []  # Reserved for stress/audit harnesses
fuzz = ["test"]  # Enable fuzzing tests (includes test feature for test_visible helpers)
audit-scan = []  # Enable full account-table invariant scans on public exits
runtime-vec-api = []  # Legacy runtime Vec adapters for tests/proofs only; production uses zero-copy views.

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = [
    'cfg(kani)',
    'cfg(target_os, values("solana"))',
] }

[[test]]
name = "v16_spec_tests"
path = "tests/v16_spec_tests.rs"
required-features = ["test"]

[[test]]
name = "v16_fuzzing"
path = "tests/v16_fuzzing.rs"
required-features = ["fuzz"]
