# OpenPerps on-chain program: the Pinocchio wrapper around the percolator engine.
[package]
name = "openperps-program"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[lib]
crate-type = ["cdylib", "lib"]
name = "openperps_program"

[dependencies]
percolator = { path = "../engine" }
pinocchio = "0.8"
bytemuck = { version = "1.23", default-features = false, features = ["derive"] }

[features]
default = ["devnet"]
no-entrypoint = []
# Devnet-only price-simulation instructions: CreateMockPool and MockSwap (the
# manipulable, token-less price toy) plus the raw two-account Trade self-cross.
# ON by default so the devnet app and the host tests keep working. A mainnet
# build (`cargo build-sbf --no-default-features`) excludes these handlers, so
# the deployed program rejects them and the toy oracle source cannot exist on
# mainnet. The production trade path (PlaceOrder, user vs House) is unaffected.
devnet = []

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(target_os, values("solana"))'] }
