# OpenPerps on-chain program: the Pinocchio wrapper around the percolator engine.
[package]
name = "openperps-program"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[lib]
crate-type = ["cdylib", "lib"]
name = "openperps_program"

[dependencies]
percolator = { path = "../engine" }
pinocchio = "0.8"
bytemuck = { version = "1.23", default-features = false, features = ["derive"] }

[dev-dependencies]
# Property-based testing for the pure HLP share/NAV math (host tests, std).
# Mirrors the engine's proptest version; the same properties are also stated as
# #[cfg(kani)] harnesses in hlp.rs for the formal (Linux-CI) proof.
proptest = "1.4"

[features]
# Production is the DEFAULT: a plain `cargo build-sbf` excludes every devnet-only
# handler, so a mainnet deploy cannot accidentally ship the price toy. Build the
# devnet artifact explicitly with `--features devnet`.
default = []
no-entrypoint = []
# Devnet-only price-simulation / test handlers: CreateMockPool and MockSwap (the
# manipulable, token-less price toy), the raw two-account Trade self-cross, and
# the legacy mock-pool oracle path CrankOracle + PinOraclePool (superseded by
# CrankPyth / CrankDexSpot). Excluded from the default (production) build, so the
# deployed program rejects them and no manipulable mark source can exist on
# mainnet. The production paths (PlaceOrder; AccrueAsset / CrankPyth / CrankDexSpot)
# are unaffected. Enable for the devnet app and the local validator suite with
# `--features devnet`.
devnet = []

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(target_os, values("solana"))', 'cfg(kani)'] }
